--- a/PinetreeShop/PinetreeShop.Domain.OrderProcess/packages.config
+++ b/PinetreeShop/PinetreeShop.Domain.OrderProcess/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Chessie" version="0.6.0" targetFramework="net46" />
-  <package id="FSharp.Core" version="4.0.0.1" targetFramework="net46" />
+  <package id="Chessie" version="0.6.0" targetFramework="netcoreapp3.1" />
+  <package id="FSharp.Core" version="4.0.0.1" targetFramework="netcoreapp3.1" />
 </packages>
